<resources>
    <string name="app_name">MCTSApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main"></string>
    <string name="appTitle">Mobile Health</string>
    <string name="startup_note">mMCTS</string>
    <string name="login">Login</string>
    <string name="today_schedule">WorkPlan</string>
    <string name="yojnao">Schemes</string>
    <string name="sansth_visit">Health Facility Visit</string>
    <string name="new_abhigam">New Initiaive્</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="change_pin">Change Pin</string>
    <string name="get_pin"></string>
    <string name="send_data">Upload Data</string>
    <string name="get_data">Download Data</string>
    <string name="title_activity_data_operation">DataOperationActivity</string>
    <string name="last_data_sent">last date of data upload</string>
    <string name="last_data_get">last date of data download</string>
    <string name="go_ahead">Go ahead</string>
    <string name="title_activity_health_seva">HealthSevaActivity</string>
    <string name="health_seva">Health services</string>
    <string name="health_servey">Family health censusે</string>
    <string name="sagarbha_seva">Meternal health</string>
    <string name="sagarbha_seva_title">Antenatal health services  </string>
    <string name="prasuti_seva">Post natal services</string>
    <string name="bal_seva">Child health services</string>
    <string name="bal_seva_ll">Child health services</string>
    <string name="bal_rasikaran_seva">Child services</string>
    <string name="kutumnb_kalyan_seva">Family health services</string>
    <string name="new_kutumnb_kalyan_seva">New family health services</string>
    <string name="rog_sarvey">Health Problemsે</string>
    <string name="death_register">Death Registration</string>
    <string name="aasha">ASHA</string>
    <string name="staff_detail">Staff Details</string>
    <string name="title_activity_family_heath_survey">FamilyHeathSurveyActivity</string>
    <string name="clear">Delete</string>
    <string name="loading">Please wait...</string>
    <string name="add_family">Add Family</string>
    <string name="edit_family">Edit Family</string>
    <string name="delete_family">Delete Family</string>
    <string name="transfer_family">Family Transfer</string>
    <string name="identity_family">Family IDs</string>
    <string name="location_family">Family Location</string>
    <string name="add_family_member">Add Member</string>
    <string name="edit_family_member">Edit Member</string>
    <string name="delete_family_member">Delete Member</string>
    <string name="locate_family_member">Migration</string>
    <string name="identity_family_member">Member IDs</string>
    <string name="bank_detail">Bank Details</string>
    <string name="family_detail">Family Details</string>
    <string name="family_list">List of Families</string>
    <string name="family_member_detail">Member Details</string>
    <string name="title_activity_sagrbhavstha">SagrbhavsthaActivity</string>
    <string name="maternal_health">Maternal Health Services</string>
    <string name="new_pregnancy">Pregnant Woman Registration</string>
    <string name="pregnancy_services">Antenatal Service</string>
    <string name="delivery_registration">Delivery Registration</string>
    <string name="post_delivery_services">Postnatal Services</string>
    <string name="pregnancy_forth_test">Forth ANC Service</string>
    <string name="pregnant_register">Registration</string>
    <string name="tt_1">TT-1</string>
    <string name="tt_2">TT-2</string>
    <string name="tt_booster">TT-Booster</string>
    <string name="risky_mom">High Risk Mother</string>
    <string name="Kortikostiroidasa">Inj.corticosterouds</string>
    <string name="already_checked">Check up done</string>
    <string name="title_activity_bal_rasikaran">BalRasikaranActivity</string>
    <string name="bal_rasikaran">Child Immunization</string>
    <string name="polio_0">પોલીઓ-0</string>
    <string name="hipetytis_0">હીપેટાઇટીસ-0</string>
    <string name="bcg">બીસીજી</string>
    <string name="pentavelent_1">પેન્ટાવેલેન્ટ-1</string>
    <string name="pentavelent_2">પેન્ટાવેલેન્ટ-2</string>
    <string name="pentavelent_3">પેન્ટાવેલેન્ટ-3</string>
    <string name="ori_1">ઓરી-1</string>
    <string name="ori_2">ઓરી-2</string>
    <string name="vita_a_1">વિટા-એ-1</string>
    <string name="dpt_1">ડીપીટી-1</string>
    <string name="dpt_2">ડીપીટી-2</string>
    <string name="dpt_3">ડીપીટી-3</string>
    <string name="dpt_booster">ડીપીટી-બુસ્ટર્</string>
    <string name="polio_booster">પોલીઓ-બુસ્ટર્</string>
    <string name="dpt_five_year">ડીપીટી-5 વર્ષ</string>
    <string name="tt_ten_year">ટીટી-10 વર્ષ</string>
    <string name="tt_sixtine_year">ટીટી-16 વર્ષ</string>
    <string name="title_activity_bal_health">BalHealthActivity</string>
    <string name="bal_seva_title">Child Health Service</string>
    <string name="hbnc">HBNC</string>
    <string name="imnci">IMNCI</string>
    <string name="title_activity_add_kutumb">AddKutumbActivity</string>
    <string name="village_name">Village Name</string>
    <string name="family_number">Family Id</string>
    <string name="house_number">House Number</string>
    <string name="street_name">Street/Society Name</string>
    <string name="street_name_list">Street/Society Name List</string>
    <string name="risky_area">Is Highrisk area?</string>
    <string name="aasha_name">ASHA Name</string>
    <string name="family_address">Addressું</string>
    <string name="family_cast">Racial</string>
    <string name="select_family_cast">-- Select Racial --</string>
    <string name="family_dharm">Religion</string>
    <string name="select_family_dharm">-- Select Religion --</string>
    <string name="family_bpl">Is BPL?</string>
    <string name="main_member_photo">Family Head Photo</string>
    <string name="landmark">Landmark</string>
    <string name="aaganvadi_no">Anganwadi Name</string>
    <string name="select_aaganvadi">-- Select Anganwadi --</string>
    <string name="family_yes">Yes</string>
    <string name="family_no">No</string>
    <string name="family_identity">Identification Card</string>
    <string name="health_problems">Health Problems</string>
    <string name="family_identity_prof">Family Ids</string>
    <string name="member_identity_prof">Member Ids</string>
    <string name="family_location">Take Location</string>
    <string name="family_add_member">Add Member</string>
    <string name="title_activity_family_identity">FamilyIdentityActivity</string>
    <string name="bpl_number">BPL Number</string>
    <string name="bpl_card_number">BPL Card Number</string>
    <string name="rsby_number">RSBY card Number</string>
    <string name="maa_card_number">MA card Number</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="title_activity_family_list">FamilyListActivity</string>
    <string name="search">Search</string>
    <string name="family_search_number">Family Id</string>
    <string name="main_member_name">Family Head Name</string>
    <string name="title_activity_add_family_member">AddFamilyMemberActivity</string>
    <string name="health_number">Unique Health ID</string>
    <string name="Take_photo">Take Photo</string>
    <string name="Name">Name</string>
    <string name="Sir_Name">Surname</string>
    <string name="Sex">Gender</string>
    <string name="husband_name">Father/Husband Name</string>
    <string name="family_head">Is family head?</string>
    <string name="family_head_relation">Relation with family head</string>
    <string name="Marital_status">Mariatal Status</string>
    <string name="Select_Marital_status">Select Mrital Status</string>
    <string name="Birth_date">Birth Date</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="height">Height (cm)</string>
    <string name="Whos_wife">Wife of?</string>
    <string name="Whos_sun_daughter">Child of? </string>
    <string name="Family_welfare">Has adopted family planning method?</string>
    <string name="Family_welfare_user">Which FP method you want to adopt?</string>
    <string name="Want_Family_welfare">Want to adopt family planning method?</string>
    <string name="second_child">Want another child? </string>
    <string name="isPregnent">Is pregnant ?</string>
    <string name="Current_Status">Member status</string>
    <string name="periods_status">Mentrual status</string>
    <string name="select_periods_status">-- Mentrual stutus-</string>
    <string name="Please_Modern">Update</string>
    <string name="Cancel">Delete</string>
    <string name="go_back">Exit</string>
    <string name="Please_migration">Migrate</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Living">Live</string>
    <string name="Dead">Death</string>
    <string name="bank_name">Bank name</string>
    <string name="branch_name">Banch name</string>
    <string name="ac_number">Account number</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="aadhar_no">Aadhar no</string>
    <string name="election_no">Election no</string>
    <string name="pan_no">PAN no</string>
    <string name="driving_no">Driving no</string>
    <string name="passport_no">Passport no</string>
    <string name="family_head_name">Family head name</string>
    <string-array name="family_walfare">
        <item>Nsv (NSV)</item>
        <item>Vasectomy (VT)</item>
        <item>Lepro TL </item>
        <item>Cupper-T</item>
        <item>Oral piles </item>
        <item>Condom </item>
        <item>Other </item>
        <item>Abdominal TL </item>
    </string-array>
    <string-array name="masik">
        <item>Not menstuating</item>
        <item>menstuating</item>
    </string-array>
    <string-array name="years">
        <item>FM/2009/</item>
        <item>FM/2010/</item>
        <item>FM/2011/</item>
        <item>FM/2012/</item>
        <item>FM/2013/</item>
        <item>FM/2014/</item>
        <item>FM/2015/</item>
        <item>FM/2016/</item>
        <item>FM/2017/</item>
        <item>FM/2018/</item>
        <item>FM/2019/</item>
        <item>FM/2020/</item>
    </string-array>
    <string name="title_activity_new_family">NewFamilyActivity</string>
    <string name="title_activity_update_family_member">UpdateFamilyMemberActivity</string>
    <string name="migrate_place">Migration Place</string>
    <string name="dist">Select District</string>
    <string name="taluko">Select Taluka</string>
    <string name="select_village">Select Village</string>
    <string name="migrate_type">Migrattion Type </string>
    <string name="parmenant">Parmenant</string>
    <string name="temp">Temporary</string>
    <string name="state">State</string>
    <string name="select_state">Select state</string>
    <string-array name="migrate_array">
        <item>Select</item>
        <item>In state</item>
        <item>Out of state</item>
    </string-array>
    <string name="title_activity_first">FirstActivity</string>
    <string name="data_entry">Date entry</string>
    <string name="Delete">Delete</string>
    <string name="new_pregnancy_number">Pregant Woman Registration No</string>
    <string name="anc_regd_date">Pregnancy registration date</string>
    <string name="services">Service</string>
    <string name="service_date">Due date</string>
    <string name="service_due_date">Service given date</string>
    <string name="add">Add</string>
    <string name="number">No</string>
    <string name="child_regd_number">Child registration no.</string>
    <string name="fm_walfare_name">Name</string>
    <string name="adopted_fp">Adopted FP method</string>
    <string name="adopted_fp_date">Adopted date</string>
    <string name="discontinue_date">Discontinue date </string>
</resources>