<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scale_10"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_send_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_data"
            android:textColor="@color/black"
            android:background="@drawable/button_selector"/>

        <TextView
            android:id="@+id/txt_last_data_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/last_data_sent"
            android:textSize="@dimen/medium_font"
            android:layout_margin="@dimen/normal_font"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scale_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_get_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_data"
            android:textColor="@color/black"
            android:background="@drawable/button_selector"
            />

        <TextView
            android:id="@+id/txt_last_data_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/last_data_get"
            android:textSize="@dimen/medium_font"
            android:layout_margin="@dimen/normal_font"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_select_village"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/scale_10"
        android:layout_height="wrap_content"></Spinner>

    <Button
        android:id="@+id/bt_go_ahead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scale_10"
        android:text="@string/go_ahead"
        android:textColor="@color/black"
        android:background="@drawable/button_selector"/>
</LinearLayout>
