<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_antenatal_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_number"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scale_5"
            android:text="@string/number" />

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_service_due_date"
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/service_date" />

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_service_date"
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/service_due_date" />

        <TextView
            android:id="@+id/txt_add_services"
            style="@style/ValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_5"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/scale_8"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>