<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_search_member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <!-- <ImageView
         android:id="@+id/img_member"
         android:scaleType="fitXY"
         android:layout_margin="@dimen/scale_3"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/ic_launcher" />-->

    <com.mcts.app.customview.CircleImageView
        android:id="@+id/img_member"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="@dimen/scale_3"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_fmhealth_number"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:layout_weight="1"
            android:text="@string/health_number" />

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_fm_number"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:layout_weight="1"
            android:text="@string/family_number" />

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_fm_member"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:layout_weight="1"
            android:text="@string/main_member_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_edit"
                style="@style/ValueText"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:gravity="center_horizontal"
                android:padding="@dimen/scale_5"
                android:layout_marginRight="@dimen/scale_5"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/txt_delete"
                style="@style/ValueText"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@drawable/button_bg"
                android:padding="@dimen/scale_5"
                android:text="@string/Delete" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_migrate"
            style="@style/ValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/scale_5"
            android:layout_margin="@dimen/scale_5"
            android:text="@string/Please_migration" />

    </LinearLayout>
</LinearLayout>
