<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_fmp_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mcts.app.customview.MyTextView

                style="@style/LabelText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="4"
                android:text="@string/village_name" />

            <com.mcts.app.customview.MyTextView
                android:id="@+id/txt_village_name"
                style="@style/ValueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="6"
                android:text="@string/village_name"></com.mcts.app.customview.MyTextView>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mcts.app.customview.MyTextView

                style="@style/LabelText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="4"
                android:text="@string/fm_walfare_name" />

            <com.mcts.app.customview.MyTextView
                android:id="@+id/txt_fm_walfare_name"
                style="@style/ValueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="6"
                android:text="@string/fm_walfare_name"></com.mcts.app.customview.MyTextView>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.mcts.app.customview.MyTextView

                style="@style/LabelText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="4"
                android:text="@string/health_number" />

            <com.mcts.app.customview.MyTextView
                android:id="@+id/txt_health_number"
                style="@style/ValueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_5"
                android:layout_weight="6"
                android:text="@string/health_number"></com.mcts.app.customview.MyTextView>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/header"
        android:orientation="horizontal">

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_number"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/scale_5"
            android:text="@string/number" />

        <com.mcts.app.customview.MyTextView
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/adopted_fp" />

        <com.mcts.app.customview.MyTextView
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/adopted_fp_date" />

        <com.mcts.app.customview.MyTextView
            style="@style/ListText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/discontinue_date" />

        <TextView
            android:id="@+id/txt_add_services"
            style="@style/ValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_5"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/scale_8"
            android:visibility="invisible"
            android:text="@string/add" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_member_fp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>