<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_preg_search_women"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <!-- <ImageView
         android:id="@+id/img_member"
         android:scaleType="fitXY"
         android:layout_margin="@dimen/scale_3"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/ic_launcher" />-->

    <com.mcts.app.customview.CircleImageView
        android:id="@+id/img_women_member"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="@dimen/scale_3"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_preg_reg_number"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:layout_weight="1"
            android:text="@string/new_pregnancy_number" />

        <com.mcts.app.customview.MyTextView
            android:id="@+id/txt_preg_women_name"
            style="@style/ListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_3"
            android:layout_weight="1"
            android:text="@string/Name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mcts.app.customview.MyTextView
                android:id="@+id/txt_preg_reg_date"
                style="@style/ListText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/scale_3"
                android:layout_weight="1"
                android:text="@string/anc_regd_date" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scale_5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_edit"
            style="@style/ValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_5"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/scale_8"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/txt_services"
            style="@style/ValueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/scale_5"
            android:background="@drawable/button_bg"
            android:gravity="center_horizontal"
            android:padding="@dimen/scale_8"
            android:text="@string/services" />

    </LinearLayout>
</LinearLayout>
